--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
     <!--  Scripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
+   <!--  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script> -->
     <script src="js/init.js"></script>
   </body>
 </html>
