--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           >Apptimize Your Travel Plans</a
         >
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Navbar Link</a></li>
+          <li><a href="#contain">Search</a></li>
+          <li><a href="#">About Us</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -46,12 +47,13 @@
       </div>
     </nav>
     <div class="banner" id="cf">
-      <img class="bottom" src="/Users/kareemmagdy/Desktop/travel-optimizer/Screen Shot 2022-01-05 at 9.50.37 AM.png" />
-      <!-- <img class="top" src="/Users/kareemmagdy/Desktop/travel-optimizer/Screen Shot 2022-01-05 at 9.58.47 AM.png" /> -->
-      <img class="bottom2" src="/Users/kareemmagdy/Desktop/travel-optimizer/Screen Shot 2022-01-05 at 10.02.55 AM.png"/>
+      
+      <img class="top" src="Screen Shot 2022-01-05 at 9.50.37 AM.png" />
+      <img class="bottom" src="Screen Shot 2022-01-05 at 10.02.55 AM.png" />
+      <img class="bottom2" src="Screen Shot 2022-01-05 at 9.58.47 AM.png"/>
     </div>
 
-      <div class="container">
+      <div class="container" id="contain">
         <br /><br />
         <div class= "airplane">
         <i class="large material-icons contain_icon">airplanemode_active</i>
