attemptig to refactor lcoal storage/refactored date

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <main class="flex-row justify-space-between">
       <div class="col-12 col-md-4">
         <div class="card">
-          <h3 class="card-header text-uppercase">Search By City Button</h3>
+          <h3 class="card-header text-uppercase">Recent Search</h3>
           <div id="city-buttons" class="card-body">
             <button data-city="Austin" class="btn">Austin</button>
           </div>
@@ -128,9 +128,11 @@
     </footer>
 
     <!--  Scripts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-   <!--  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script> -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/init.js"></script>
   </body>
 </html>
