Media screen rules for the mobile and responsive banner image  by materialize

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
       </div>
     </nav>
     <div class="banner" id="cf">
-      
-      <img class="top" src="Screen Shot 2022-01-05 at 9.50.37 AM.png" />
-      <img class="bottom" src="Screen Shot 2022-01-05 at 10.02.55 AM.png" />
-      <img class="bottom2" src="Screen Shot 2022-01-05 at 9.58.47 AM.png"/>
+      <img class="top responsive-img" src="Screen Shot 2022-01-05 at 9.50.37 AM.png" />
+      <img class="bottom responsive-img" src="Screen Shot 2022-01-05 at 10.02.55 AM.png" />
+      <img class="bottom2 responsive-img" src="Screen Shot 2022-01-05 at 9.58.47 AM.png"/>
     </div>
 
       <div class="container" id="contain">
