updated js wiki linked

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         <div id="city-container" class="list-group">
         </div>
       </div>
+              <!-- BEGIN NEW -->
+              <ul id="list"></ul>
+              <div id="poi"></div>
+              <button id="next_button">Next</button>
+              <!-- END NEW -->
     </div>
     </main>
 
