added materialize cdn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       media="screen,projection"
     />
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@1&family=Parisienne&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
   </head>
   <body>
     <nav class="light-blue lighten-1" role="navigation">
