--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               autofocus="true"
               class="form-input"
             />
-            <button type="submit" class="btn s6">Get Things to Do</button>
+            <a type="submit" class="btn s6">Get Things to Do</a>
           </form>
         </div>
       
@@ -108,8 +108,9 @@
               <button id="next_button">Next</button>
               <!-- END NEW -->
     </div>
-    </main>
+    </main>   
 
+    
     <footer class="page-footer orange">
         <div class="row">
           <div class="col l6 s12"></div>
@@ -137,7 +138,8 @@
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
-    ></script>
+    >
+  </script>
     <script src="js/init.js"></script>
   </body>
 </html>
