--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <!-- <a type="submit" class="btn s6">Get Things to Do</a> -->
  
             <!-- <a class="btn s6 waves-effect waves-light btn pink darken-1 modal-trigger" type="submit" href="#demo-modal">Get Things to Do</a> -->
-            <button data-target="modal-trigger" class="btn waves-effect waves-light modal-trigger s6" type="submit" href="#modal-trigger" id="cityname">Get Things to Do</button>
-                   <!-- Modal Structure -->
-                <div id="modal-trigger" class="modal"> 
+            <button   class="btn waves-effect waves-light modal-trigger s6" type="submit" href="#modal1" id="cityname">Get Things to Do</button>
+                   <!-- Modal Structure  data-target="modal-trigger"-->
+                <div id="modal1" class="modal"> 
                   <div class="modal-content">
                     <p>Please enter a City name</p>
                   </div>
@@ -95,6 +95,8 @@
                   </div>
                 </div>
               </div>
+
+
           
 
 
