--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="light-blue lighten-1" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"
-          >Apptimize Your Travel Plans</a
+          ><i class="Large material-icons ">flight_takeoff</i>Apptimize Your Travel Plans</a
         >
         <ul class="right hide-on-med-and-down">
           <li><a href="#contain">Search</a></li>
@@ -153,7 +153,7 @@
     
     <footer class="page-footer orange">
 
-      <div class="container">Made by the Apptimizers</div>
+      <div class="container"><i class="material-icons">copyright</i> Made by the Apptimizers</div>
 
     </footer>
 
