fixed css rules

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- <div id="city-container" class="list-group"> -->
           <div id="poi"></div>
         </div>
-      </div>
+      </div class="oMap">
               <!-- BEGIN NEW -->
               
               <!-- <div id="buttonPos">
