--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
     <main class="flex-row justify-space-between container" id="search2">
       <div class="row" id="search6">
       <div class=" col s5" id="search3">
-          <h3 class="card-header text-uppercase">Search By City Button</h3>
+          <h3 class="card-header text-uppercase">Most Popular Destinations</h3>
           <div id="city-buttons" class="card-body s6">
-            <button data-city="Austin" class="btn">Austin</button>
+            <button data-city="London" class="btn">London</button>
+            <button data-city="Tokyo" class="btn">Tokyo</button>
+            <button data-city="New York City" class="btn">New York City</button>
             <div id="city-container">Cities</div>
           </div>
           <ul id="list"></ul>
