--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!-- <a type="submit" class="btn s6">Get Things to Do</a> -->
  
             <!-- <a class="btn s6 waves-effect waves-light btn pink darken-1 modal-trigger" type="submit" href="#demo-modal">Get Things to Do</a> -->
-            <button   class="btn waves-effect waves-light modal-trigger s6" type="submit" href="#modal1" id="cityname">Get Things to Do</button>
+            <button   class="btn waves-effect waves-light s6" type="submit" id="cityname">Get Things to Do</button>
                    <!-- Modal Structure  data-target="modal-trigger"-->
                 <div id="modal1" class="modal"> 
                   <div class="modal-content">
