--- a/index.html
+++ b/index.html
@@ -16,21 +16,14 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link
-      href="css/materialize.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/style.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@1&family=Parisienne&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<link
+href="./assets/css/style.css"
+type="text/css"
+rel="stylesheet"
+media="screen,projection"
+/>
   </head>
   <body>
 
@@ -53,9 +46,9 @@
       </div>
     </nav>
     <div class="banner" id="cf">
-      <img class="top responsive-img" src="Screen Shot 2022-01-05 at 9.50.37 AM.png" />
-      <img class="bottom responsive-img" src="Screen Shot 2022-01-05 at 10.02.55 AM.png" />
-      <img class="bottom2 responsive-img" src="Screen Shot 2022-01-05 at 9.58.47 AM.png"/>
+      <img class="top responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.50.37 AM.png Shot 2022-01-05 at 9.50.37 AM.png" />
+      <img class="bottom responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 10.02.55 AM.png Shot 2022-01-05 at 10.02.55 AM.png" />
+      <img class="bottom2 responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.58.47 AM.png Shot 2022-01-05 at 9.58.47 AM.png"/>
     </div>
 
       <div class="container" id="contain">
@@ -203,7 +196,7 @@ console.log('A trackuserlocationstart event has occurred.');
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-    <script src="js/init.js"></script>
+    <script src="/assets/js/init.js"></script>
     
   </body>
 </html>
