pic file name change

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ media="screen,projection"
       </div>
     </nav>
     <div class="banner" id="cf">
-      <img class="top responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.50.37 AM.png Shot 2022-01-05 at 9.50.37 AM.png" />
-      <img class="bottom responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 10.02.55 AM.png Shot 2022-01-05 at 10.02.55 AM.png" />
-      <img class="bottom2 responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.58.47 AM.png Shot 2022-01-05 at 9.58.47 AM.png"/>
+      <img class="top responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.50.37 AM.png" />
+      <img class="bottom responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 10.02.55 AM.png" />
+      <img class="bottom2 responsive-img" src="./assets/images/Screen Shot 2022-01-05 at 9.58.47 AM.png"/>
     </div>
 
       <div class="container" id="contain">
@@ -173,7 +173,7 @@ media="screen,projection"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-    <script src="/assets/js/init.js"></script>
+    <script src="./assets/js/init.js"></script>
     
   </body>
 </html>
