--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ media="screen,projection"
  
             <!-- <a class="btn s6 waves-effect waves-light btn pink darken-1 modal-trigger" type="submit" href="#demo-modal">Get Things to Do</a> -->
             <button class="btn waves-effect waves-light modal-trigger s6" type="submit" href="#modal-trigger" id="cityname">Get Things to Do</button>
-                <!-- Modal Structure -->
+                <!-- Modal Structure for inputting city -->
                 <div id="#modal-trigger" class="modal modal-trigger">
                   <div class="modal-content">
                     <p>Please enter a City name</p>
@@ -88,6 +88,16 @@ media="screen,projection"
                   </div>
                 </div>
               </div>
+              <!-- Modal Structure for error messages -->
+              <div id="#modal-error" class="modal modal-trigger">
+                <div class="modal-content">
+                  <p>We're sorry, but the request you made is not working. Either the service is down or something is wrong with your internet access.</p>
+                </div>
+                <div class="modal-footer">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
+                </div>
+              </div>
+            </div>
           
 
 
