--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ media="screen,projection"
               <div class="map row">
               <div id='map' style='width: 1200px; height: 600px;' class="col s12 m6 12">
               
-git </div>
+</div>
 </div>
 </div>
     </div>
