--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ git </div>
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-    <script src="./assets/js/init.js"></script>
+    <script src="/assets/js/init.js"></script>
     
   </body>
 </html>
