--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <!-- Modal Structure for error messages -->
               <div id="#modal-error" class="modal modal-trigger">
                 <div class="modal-content">
-                  <p>We're sorry, but the request you made is not working. Either the service is down or something is wrong with your internet access.</p>
+                  <p>We're sorry, but the request you made is not working. Either the service is down or something is wrong with your request.</p>
                 </div>
                 <div class="modal-footer">
                   <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
