fixing modal call

--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
             <!-- <a type="submit" class="btn s6">Get Things to Do</a> -->
  
             <!-- <a class="btn s6 waves-effect waves-light btn pink darken-1 modal-trigger" type="submit" href="#demo-modal">Get Things to Do</a> -->
-            <button class="btn waves-effect waves-light modal-trigger s6" type="submit" href="#modal-trigger" id="cityname">Get Things to Do</button>
+            <button class="btn waves-effect waves-light modal-trigger s6" type="submit" id="cityname">Get Things to Do</button>
                 <!-- Modal Structure for inputting city -->
-                <div id="#modal-trigger" class="modal modal-trigger">
+                <div id="modal" class="modal">
                   <div class="modal-content">
-                    <p>Please enter a City name</p>
+                    <p>You have to enter a city name to run a search</p>
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
                   </div>
                 </div>
               <!-- Modal Structure for error messages -->
-              <div id="#modal-error" class="modal modal-trigger">
+              <div id="modal-error" class="modal">
                 <div class="modal-content">
                   <p>We're sorry, but the request you made is not working. Either the service is down or something is wrong with your request.</p>
                 </div>
