making content changes to html and adding favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
     <title>Travel Planner</title>
+    <link rel="icon" type="image/png" href="https://www.freeiconspng.com/uploads/suitcase-travel-flat-design-travel-icon-png-suitcase-png-suitcase-icon--22.png" />
     <!-- Mapbox -Lando -->
 
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet'/>
@@ -128,7 +129,7 @@
 
       <!-- Map -Lando-->
       <div class="map-space">
-        <h3 class="card-header text-uppercase map-title">Search Points of Interest Near Your Current Location</h3>
+        <h3 class="card-header text-uppercase map-title">Search Points of Interest Nearby</h3>
         <div class="map row">
           <div id='map' style='width: 1200px; height: 600px;' class="col s12 m6 12">
           </div>
