--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         >
         <ul class="right hide-on-med-and-down">
           <li><a href="#contain">Search</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="#footer">About Us</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -140,7 +140,7 @@
     </div>
     
     <footer class="page-footer orange">
-      <div class="container"><i class="material-icons">copyright</i> Made by the Apptimizers</div>
+      <div class="container" id="footer"><i class="material-icons">copyright</i> Made by the Apptimizers</div>
     </footer>
 
     <!--  Scripts-->
