Back button added

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             </div>
             <ul id="list"></ul>
             <div id="buttonPos">
+              <button id="back_button" class="waves-effect waves-light btn">Back<i class="material-icons">arrow_backward</i></button>
               <button id="next_button" class="waves-effect waves-light btn">Next<i class="material-icons right">arrow_forward</i></button>
             </div>
         </div>
@@ -127,7 +128,7 @@
         </div>
       </div>
 
-      <!-- Map -Lando-->
+      <!-- Mapbox -Lando-->
       <div class="map-space">
         <h3 class="card-header text-uppercase map-title">Search Points of Interest Nearby</h3>
         <div class="map row">
