--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <ul id="list"></ul>
             <div id="buttonPos">
-              <button id="back_button" class="waves-effect waves-light btn">Back<i class="material-icons left">arrow_backward</i></button>
+              <button id="back_button" class="waves-effect waves-light btn">Back<i class="material-icons left">arrow_back</i></button>
               <button id="next_button" class="waves-effect waves-light btn">Next<i class="material-icons right">arrow_forward</i></button>
             </div>
         </div>
